[package]
name = "read_hdf_as_raster"
version = "0.1.0"
authors = ["Caio Hamamura <caiohamamura@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdf5 = "*"
ndarray = "*"
gdal = "*"
gdal-sys = "*"
rayon = "*"